move mintutes row a bit more left to avoid overflow

--- a/share/html/NoAuth/css/base/ui.timepickr.custom.css
+++ b/share/html/NoAuth/css/base/ui.timepickr.custom.css
@@ -49,8 +49,12 @@
     font-size: 1.1em;
 }
 
-.ui-timepickr ol.ui-timepickr-row:nth-child(2), .ui-timepickr ol.ui-timepickr-row:nth-child(3) {
+.ui-timepickr ol.ui-timepickr-row:nth-child(2) {
     margin-left: -150px;
+}
+
+.ui-timepickr ol.ui-timepickr-row:nth-child(3) {
+    margin-left: -200px;
 }
 
 .ui-timepickr-button span {
